<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="text">Login</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Back to Start</string>
    <string name="ok">OK</string>
    <string name="dialog_title">What do you want</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="startchat">Start Chat</string>
    <string name="textView">Text View</string>
    <string name="forecast">WeatherForecast</string>
    <string name="currentTemperature">Current Temperature: </string>
    <string name="minTemperature">Minimum Temperature: </string>
    <string name="maxTemperature">Maximum Temperature: </string>
    <string name="messageHere">Message Here</string>
    <string name="idHere">ID=</string>
    <string name="deleteMessage">DELETE THIS MESSAGE</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="lab8_about_toast">Version 1.0 - Shu Chen</string>
    <string name="lab8_item2_dialog">"Do you want to go back?"</string>
    <string name="lab8_item3_newmessage">New Message</string>
</resources>