<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/singleMessageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageHere"
        android:layout_alignParentTop="true"
        android:gravity="right"/>

    <TextView
        android:id="@+id/singleIDView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singleMessageView"
        android:layout_marginTop="22dp"
        android:text="@string/idHere"
        android:gravity="right"/>

    <Button
        android:id="@+id/deleteMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteMessage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>