<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chen.androidlabs.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="297dp"
        android:text="@string/ButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/startchat"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startchat"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="296dp"
        android:layout_marginTop="23dp"
        android:text="@string/startchat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/weatherforecast" />

    <Button
        android:id="@+id/weatherforecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="252dp"
        android:text="@string/forecast"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="143dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/startchat"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/TestToolbar" />

    <Button
        android:id="@+id/TestToolbar"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginBottom="334dp"
        android:layout_marginEnd="289dp"
        android:text="@string/title_activity_test_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
