<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chen.androidlabs.WeatherForecast"
    >

    <ImageView
        android:id="@+id/forecastImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="27dp"
        android:text="@string/currentTemperature"
        app:layout_constraintBottom_toTopOf="@+id/minTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastImage"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="267dp" />

    <TextView
        android:id="@+id/minTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="28dp"
        android:text="@string/minTemperature"
        app:layout_constraintBottom_toTopOf="@+id/forecastImage"
        app:layout_constraintEnd_toStartOf="@+id/forecastImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTemperature" />

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="133dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="28dp"
        android:text="@string/maxTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTemperature" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:layout_marginEnd="233dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="17dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTemperature"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="402dp" />

</android.support.constraint.ConstraintLayout>
